--- a/Libraries/css/themekit/main-dark.css
+++ b/Libraries/css/themekit/main-dark.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /******************************************************
 *   FIXED COLORS (Change these to propagate chages)   *
 ******************************************************/
@@ -24,7 +23,7 @@
           box-shadow: 0px 0px 10px 0px rgba(255, 17, 13, 0.5);
 }
 
-Ø .color-demo.blue {
+.color-demo.blue {
   background-color: #00bee0;
   -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 147, 173, 0.5);
           box-shadow: 0px 0px 10px 0px rgba(0, 147, 173, 0.5);
@@ -525,6 +524,12 @@ input[type="submit"].cyan.outlined:active {
   width: 100%;
   height: 100%;
   border: 0;
+}
+
+input {
+  -webkit-appearance: none !important;
+  -moz-appearance: none !important;
+  appearance: none !important;
 }
 
 form {
